Version prêt pour deploiement